--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
+    "antd": "^5.24.3",
+    "axios": "^1.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
